--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,11 @@ dependencies:
   cupertino_icons: ^1.0.5
   modal_progress_hud_nsn: ^0.4.0
   # modal_progress_hud: ^0.1.3
-  cloud_firestore: ^4.8.5
-  firebase_auth: ^4.7.3
+  cloud_firestore: ^4.5.2
+  firebase_auth: ^4.2.10
   firebase_core: ^2.15.1
-  firebase_storage: ^11.2.6
+  firebase_storage: ^11.1.1
+  # firebase_auth_web: ^2.0.0
   # native_admob_flutter: ^1.4.0
   admob_flutter: ^3.0.0
   google_sign_in: ^6.1.4
@@ -33,8 +34,8 @@ dependencies:
 
   image_picker: ^0.8.1+3
 
-  intl: ^0.18.1
-  flutter_local_notifications: ^8.0.0
+  intl: ^0.17.0
+  flutter_local_notifications: ^9.9.0
   devicelocale: ^0.6.0
   dotted_border: ^2.0.0+3
 
